[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Enemies/GenericEnemy.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 2.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.698039, 0.203922, 0.203922, 1 )

[sub_resource type="CapsuleMesh" id=3]
material = SubResource( 2 )
radius = 0.5
mid_height = 2.0

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.1, 0.1, 0.25 )

[sub_resource type="SphereShape" id=5]
radius = 3.0

[sub_resource type="Animation" id=6]
resource_name = "Die"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Meshes:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Meshes:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 90, 90, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Hit"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Meshes:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.0794499, -0.276576 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Meshes:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 9.387, 0, 0 ), Vector3( -34.498, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="GenericEnemy" type="KinematicBody" groups=[
"Enemies",
]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Meshes" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Meshes"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="Meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.913241, -0.617249 )
mesh = SubResource( 4 )
material/0 = null

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 5 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -1, -1000 )

[node name="DmgTimer" type="Timer" parent="."]

[node name="MoveTimer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 6 )
anims/Hit = SubResource( 7 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="DmgTimer" to="." method="_on_DmgTimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
